# htmx_book_app

./: .commit_template  .env  .gitignore  Pipfile  README.md  compose.yml  demo.html  makefile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: post_create.sh  post_start.sh
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  cross_platform.yml  pr_test.yml
src/: app.py  chat.py  main.py  todo.py
static/htmx/: htmx.js
static/htmx/ext/: ajax-header.js  debug.js  head-support.js  json-enc.js  preload.js  remove-me.js  response-targets.js  ws.js
static/styles/: chat.css  todo.css  tutorial.css
templates/: base.html  base_ext.html  base_todo.html  index.html  section1.html  section10.html  section11.html  section12.html  section13.html  section14.html  section15.html  section16.html  section17.html  section18.html  section3.html  section4.html  section5.html  section6.html  section7.html  section8.html  section9.html
templates/chat/: base.html  index.html
templates/todo/: base.html  index.html  task.html
templates/tutorial/: base.html  base_ext.html  index.html  section10.html  section11.html  section12.html  section13.html  section14.html  section15.html  section16.html  section19.html  section3.html  section4.html  section5.html  section6.html  section7.html  section8.html  section9.html
tests/: chat_test.py  main_test.py  test_sample.py  todo_test.py
