[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".vscode",
    "__init__.py",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
ignore = ["A003", "D415", "E203", "S101", "D100", "D103", "S104"]
select = ["A", "N", "E", "D", "W", "F", "I", "C90", "S"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Tomoki Ota <tomo.soccer1227@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.6.1"
fastapi = "^0.115.5"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
